--- a/index.html
+++ b/index.html
@@ -13,31 +13,6 @@
 <script type="text/javascript" src="./bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
 <script type="text/javascript" src="./bower_components/angular-messages/angular-messages.js"></script>
-<script type="text/javascript" src="./survey-index.js"></script>
-<script type="text/javascript" src="./survey-common.js"></script>
-<script type="text/javascript" src="./survey-editor.js"></script>
-<script type="text/javascript" src="./survey-preview.js"></script>
-<script type="text/javascript">
-angular.module("MyApp", ['ngRoute', 'SurveyIndex', 'SurveyEditor', 'SurveyPreview'])
-  .config(['$routeProvider', function($routeProvider) {
-    $routeProvider.when('/new', {
-      controller: 'SurveyEditorPageController as pageCtrl',
-      templateUrl : './survey-editor.html'
-    });
-    $routeProvider.when('/preview/:id', {
-      templateUrl : './survey-preview.html'
-    });
-    $routeProvider.when('/', {
-      templateUrl : './survey-index.html'
-    });
-    $routeProvider.when('/edit/:id',{
-      controller: 'SurveyEditorPageController as pageCtrl',
-      templateUrl : './survey-editor.html'
-    });
-    $routeProvider.otherwise({
-      redirectTo: '/'
-    });
-  }])
-</script>
+<script type="text/javascript" src="./app.js"></script>
 </body>
 </html>
