fixed inncorect model for select

--- a/field-templates/select.html
+++ b/field-templates/select.html
@@ -1,6 +1,6 @@
 <div class="field">
   <select class="input select"
-          ng-model="componentCtrl.model"
+          ng-model="model"
           ng-options="option as option for option in componentCtrl.options.acceptable_answers"
           ng-required="componentCtrl.options.required">
   </select>
