--- a/field-templates/input-url.html
+++ b/field-templates/input-url.html
@@ -1,6 +1,6 @@
 <div class="field">
   <input type="url"
-         ng-model="componentCtrl.model"
+         ng-model="model"
          ng-required="componentCtrl.options.required"
          class="input" />
 </div>
