corrected ng-model

--- a/field-templates/textarea.html
+++ b/field-templates/textarea.html
@@ -1,5 +1,5 @@
 <div class="field">
-  <textarea ng-model="componentCtrl.model"
+  <textarea ng-model="model"
             ng-required="componentCtrl.options.required"
             class="input textarea">
   </textarea>
